--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="height=device-height, initial-scale=1.0">
 <title>Wookkaao Company Profile</title>
 
 <style>
@@ -282,4 +283,5 @@ body{
 
 </body>
 </html>
+
 
