--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body{
     margin:20px auto;
     background:#ffffff;
     display:flex;
+    flex-wrap: nowrap;
     position:relative;
 }
 
@@ -283,5 +284,6 @@ body{
 
 </body>
 </html>
+
 
 
