--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
 
         .logo {
-            width: 400px;
+            width: 500px;
             margin-bottom: 40px;
         }
 
@@ -62,12 +62,13 @@
             font-weight: bold;
             border-bottom: 2px solid white;
             display: inline-block;
+            margin-top: 5px;
             margin-bottom: 15px;
             padding-bottom: 5px;
         }
 
         .about-text {
-            font-size: 15px;
+            font-size: 17px;
             line-height: 1.6;
             color: #e0e6ed;
             max-width: 500px;
@@ -135,9 +136,9 @@
         }
 
         /* Positions adjusted to match image_d6c052.png precisely */
-        .c1 { top: 0; right: 80px; z-index: 3; }
-        .c2 { top: 230px; right: 90px; z-index: 2; }
-        .c3 { top: 450px; right: 80px; z-index: 1; }
+        .c1 { top: 0; right: 90px; z-index: 1; }
+        .c2 { top: 230px; right: 100px; z-index: 2; }
+        .c3 { top: 450px; right: 90px; z-index: 3; }
 
         .contact-pill {
             position: absolute;
@@ -155,13 +156,13 @@
         }
 
         .tel-icon {
-            width: 50px;
-            height: 50px;
+            width: 90px;
+            height: 60px;
             margin-right: 15px;
             filter: brightness(0) invert(1);
         }
 
-        .contact-text b { font-size: 16px; display: block; }
+        .contact-text b { font-size: 22px; display: block; }
         .contact-text span { font-size: 22px; font-weight: bold; }
 
     </style>
